# MyJupyterBookShelf

./: .buildinfo  .gitignore  README.md  content.html  genindex.html  intro.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: demo.yml  deploy.yml
_sources/: content.md
_sources/contents/: 04exercises.ipynb  spaCy.ipynb
_sources/contents/IntroAndContentsInJB/: intro.md  notebooks.ipynb
_sources/contents/software_testing/: 03_exercises.ipynb  04exercises.ipynb  05.md  intro.md
_sources/contents/translation/: pipeline_15tools.md
_sources/images/software_testing/: README.md
bookShelf/: _config.yml  _toc.yml
bookShelf/_build/.doctrees/: content.doctree  environment.pickle  intro.doctree  markdown.doctree  notebooks.doctree
bookShelf/_build/html/: .buildinfo  content.html  genindex.html  index.html  intro.html  markdown.html  notebooks.html  (+3 more)
bookShelf/contents/: 04_exercises.ipynb  IntroToGINZA.md  spaCy.ipynb
contents/: 04exercises.html  IntroToGINZA.html  markdown.html  spaCy.html
contents/IntroAndContentsInJB/: content.html  intro.html  markdown.html  notebooks.html
contents/math/: intro.html  set_and_phase_1.html
contents/software_testing/: 01.html  02.html  03.html  04exercises.html  05.html  06.html  07.html  08.html  09.html  intro.html
contents/translation/: AirPassengers.html  TheBestDocumentSimilarityAlgorithm.html  pipeline_15tools.html  trans.html
markdown/: IntroToGINZA.html
notebook/: notebooks.html
notebooks/.pytest_cache/: README.html
samples/: _toc.yml
(+174 files in other folders)
