[tool.poetry]
name = "jupyterbook"
version = "0.1.0"
description = ""
authors = ["amagaeru"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.2"
pandas = "^1.1.3"
matplotlib = "^3.3.2"
jupyter-book = "^0.8.2"
jupyterlab = "^2.2.8"
statsmodels = "^0.12.0"
ghp-import = "^1.0.0"
pytest = "^6.1.1"
pytest-ipynb = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
